@@ -430,3 +430,5 @@ underflow in symmetric eigenvalues
 
 * Mingxi Wu <mwu@cise.ufl.edu> bug report for multinomial pdf
 
+* Chris Mihelich <umbricola@gmail.com> bug reports and suggestions for
+gsl_ldexp and gsl_frexp
