@@ -1,3 +1,8 @@
+2007-11-04  Brian Gough  <bjg@network-theory.co.uk>
+
+	* ldfrexp.c (gsl_ldexp): handle full range of double precision
+	(gsl_frexp): handle full range of double precision
+
 2007-07-30  Brian Gough  <bjg@network-theory.co.uk>
 
 	* infnan.c (gsl_finite): use isfinite (c99) in preference to
